; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_show_ip.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_show_ip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@show_ip.abuf = internal global [256 x i8] zeroinitializer, align 16
@show_ip.ptr = internal global i8* getelementptr inbounds ([256 x i8], [256 x i8]* @show_ip.abuf, i32 0, i32 0), align 8
@.str = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @show_ip(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i8*, i8** @show_ip.ptr, align 8
  %5 = icmp ugt i8* %4, getelementptr inbounds ([256 x i8], [256 x i8]* @show_ip.abuf, i64 0, i64 200)
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([256 x i8], [256 x i8]* @show_ip.abuf, i64 0, i64 0), i8** @show_ip.ptr, align 8
  br label %7

7:                                                ; preds = %6, %1
  %8 = load i8*, i8** @show_ip.ptr, align 8
  store i8* %8, i8** %3, align 8
  %9 = load i8*, i8** @show_ip.ptr, align 8
  %10 = load i32, i32* %2, align 4
  %11 = lshr i32 %10, 24
  %12 = load i32, i32* %2, align 4
  %13 = lshr i32 %12, 16
  %14 = and i32 %13, 255
  %15 = load i32, i32* %2, align 4
  %16 = lshr i32 %15, 8
  %17 = and i32 %16, 255
  %18 = load i32, i32* %2, align 4
  %19 = and i32 %18, 255
  %20 = call i64 @sprintf(i8* %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %14, i32 %17, i32 %19)
  %21 = add nsw i64 %20, 1
  %22 = load i8*, i8** @show_ip.ptr, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 %21
  store i8* %23, i8** @show_ip.ptr, align 8
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i64 @sprintf(i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
